fix Inspire author box avatar on mobile

--- a/assets/scss/themes/inspire.scss
+++ b/assets/scss/themes/inspire.scss
@@ -12,7 +12,7 @@
 	--author-box-border-radius: 0;
 	--author-box-shadow: 0;
 	--author-box-grid-column-gap: 0;
-	--author-box-avatar-margin: -60px 0 0 -60px;
+	--author-box-avatar-margin: -60px auto 0;
 }
 
 .entry-content {
